# shanty-quest

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  deploy-ghpages.sh  run-wasm.sh
assets/levels/: level.ldtk  test.ldtk
crates/app_state/: Cargo.toml
crates/asset_struct/: Cargo.toml
crates/audio_plus/: .gitignore  Cargo.toml  readme.md  run-wasm-example.sh
crates/audio_plus/crates/examples_common/: Cargo.toml
crates/audio_plus/crates/examples_common/src/: box_sprite.rs  instructions.rs  lib.rs  player.rs  prelude.rs  ttl.rs
crates/audio_plus/examples/: bgm.rs  demo.rs  fade.rs  mixer.rs  positional.rs  random.rs  spawning.rs
crates/audio_plus/src/: channels.rs  effect.rs  lib.rs  listener.rs  mixer.rs  prelude.rs  source.rs  voice.rs
crates/audio_plus/static/: index.html
crates/global_state/: Cargo.toml
crates/grid_combiner/: Cargo.toml
examples/angle/: main.rs
examples/band_jam/: main.rs
examples/band_selection/: main.rs
examples/character_controller/: main.rs
examples/clickable/: main.rs
examples/collision/: main.rs
examples/combat/: main.rs
examples/combine_grid/: main.rs
examples/component_child/: main.rs
examples/cutscenes/: main.rs  quest1.rs
examples/damage/: main.rs
examples/dialogue/: main.rs  quest1.rs
examples/easings/: main.rs
examples/ldtk/: main.rs
examples/player/: main.rs
examples/timed_chance/: main.rs
examples/transform2/: main.rs
examples/upgrades/: main.rs
src/: lib.rs  main.rs
src/common/: app_state.rs  asset_library.rs  clickable.rs  component_child.rs  cutscene.rs  (+27 more)
static/: index.html
(+111 files in other folders)
