[package]
name = "audio_plus"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
bevy = "0.9.1"
bevy_kira_audio = "0.13.0"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.82"

[dev-dependencies]
examples_common = { path = "crates/examples_common" }
bevy_egui = "0.15"

